--- a/view/index.html
+++ b/view/index.html
@@ -15,9 +15,9 @@
   </head>
   <body onfocus="focus()">
     <div class="w3-bar w3-top w3-border w3-light-gray" style="overflow:visible;">
-	  <div class="w3-dropdown-hover" aria-haspopup="true">
+	  <div class="w3-dropdown-hover">
 	    <button class="w3-bar-item w3-button w3-teal w3-ripple w3-hide-medium w3-hide-large"><i class="fa fa-bars" aria-hidden="true"></i></button>
-		<div class="w3-dropdown-content w3-bar-block w3-card-4 w3-light-gray" style="margin-top: 35px">
+		<div class="w3-dropdown-content w3-bar-block w3-card-4 w3-light-gray" style="margin-top: 35px" aria-haspopup="true">
 		  <button class="w3-bar-item w3-button" onclick="uploadImage(true)">Upload image</button>
           <div id="mobile_checkbox_img" class="w3-bar-item w3-button" onclick="sendImgMobile()">Send as image</div>
           <button class="w3-bar-item w3-button" onclick="$('#chat_zone').empty()">Clear messages</button>
