--- a/view/index.html
+++ b/view/index.html
@@ -15,12 +15,12 @@
   </head>
   <body onfocus="focus()">
     <div class="w3-bar w3-top w3-border w3-light-gray" style="overflow:visible;">
-	  <div class="w3-dropdown-hover">
-	    <button class="w3-bar-item w3-button w3-teal w3-ripple w3-hide-medium w3-hide-large" aria-haspopup="true"><i class="fa fa-bars" aria-hidden="true"></i></button>
+	  <div id="mobile_menu" class="w3-dropdown-click">
+	    <button class="w3-bar-item w3-button w3-teal w3-ripple w3-hide-medium w3-hide-large" aria-haspopup="true" onclick="toggleMobileMenu()"><i class="fa fa-bars" aria-hidden="true"></i></button>
 		<div class="w3-dropdown-content w3-bar-block w3-card-4 w3-light-gray" style="margin-top: 35px">
-		  <button class="w3-bar-item w3-button" onclick="uploadImage(true)">Upload image</button>
-          <div id="mobile_checkbox_img" class="w3-bar-item w3-button" onclick="sendImgMobile()">Send as image</div>
-          <button class="w3-bar-item w3-button" onclick="$('#chat_zone').empty()">Clear messages</button>
+		  <button class="w3-bar-item w3-button" onclick="uploadImage(true);$('#mobile_menu .w3-dropdown-content').hide()">Upload image</button>
+          <div id="mobile_checkbox_img" class="w3-bar-item w3-button" onclick="sendImgMobile();$('#mobile_menu .w3-dropdown-content').hide()">Send as image</div>
+          <button class="w3-bar-item w3-button" onclick="$('#chat_zone').empty();$('#mobile_menu .w3-dropdown-content').hide()">Clear messages</button>
         </div>
       </div>
       <div class="w3-bar-item w3-black w3-hide-small"><b>ChatNoir</b></div>
