--- a/view/signup.html
+++ b/view/signup.html
@@ -23,6 +23,10 @@
     <p><label for="admin"><input id="admin" class="w3-checkbox" type="checkbox"> Ask admin permissions</label></p>
     <button id="signup_btn" onclick="signup()" class="w3-button w3-section w3-teal w3-ripple w3-green" disabled>Create account</button>
   </section>
+  
+  <section id="errors" class="w3-container w3-margin-top w3-center">
+    <p id="signup_err"></p>
+  </section>
 </div>
 </body>
 </html>
