--- a/view/index.html
+++ b/view/index.html
@@ -15,10 +15,10 @@
   </head>
   <body onfocus="focus()">
     <div class="w3-bar w3-top w3-border w3-light-gray" style="overflow:visible;">
-	  <div id="mobile_menu" class="w3-dropdown-click">
-	    <button class="w3-bar-item w3-button w3-teal w3-ripple w3-hide-medium w3-hide-large" aria-haspopup="true" onclick="toggleMobileMenu()"><i class="fa fa-bars" aria-hidden="true"></i></button>
-		<div class="w3-dropdown-content w3-bar-block w3-card-4 w3-light-gray" style="margin-top: 35px">
-		  <button class="w3-bar-item w3-button" onclick="uploadImage(true);$('#mobile_menu .w3-dropdown-content').hide()">Upload image</button>
+      <div id="mobile_menu" class="w3-dropdown-click">
+        <button class="w3-bar-item w3-button w3-teal w3-ripple w3-hide-medium w3-hide-large" aria-haspopup="true" onclick="toggleMobileMenu()"><i class="fa fa-bars" aria-hidden="true"></i></button>
+        <div class="w3-dropdown-content w3-bar-block w3-card-4 w3-light-gray" style="margin-top: 35px">
+          <button class="w3-bar-item w3-button" onclick="uploadImage(true);$('#mobile_menu .w3-dropdown-content').hide()">Upload image</button>
           <button id="mobile_checkbox_img" class="w3-bar-item w3-button" onclick="sendImgMobile();$('#mobile_menu .w3-dropdown-content').hide()">Send as image</button>
           <button class="w3-bar-item w3-button" onclick="$('#chat_zone').empty();$('#mobile_menu .w3-dropdown-content').hide()">Clear messages</button>
         </div>
@@ -29,14 +29,15 @@
       <button class="w3-bar-item w3-button w3-right w3-teal w3-ripple w3-hide-medium w3-hide-large" onclick="clickLogin()"><i class="fa fa-sign-out" aria-hidden="true"></i></button>
       <div class="w3-bar-item w3-right"><span class="w3-hide-small">You are </span><b><span id="nickname">client-x</span></b><span class="w3-hide-small">.</span></div>
       <div id="afk" class="w3-bar-item w3-right" style="color: green" onclick="$('#connected').toggle()"><i class="fa fa-circle" aria-hidden="true"><span class="w3-hide-small"> Connected users</span></i></div>
-	  <div class="w3-dropdown-hover w3-right">
-	    <div class="w3-bar-item w3-hover-gray"><img src="/img/keyko.png" id="key" class="keyarea" height="20" width="20" hidden onclick="showkey()"></div>
-		<div class="w3-dropdown-content w3-bar-block w3-card-4 w3-light-gray" style="margin-top: 35px">
+      <div class="w3-dropdown-hover w3-right keyarea">
+        <div class="w3-bar-item w3-hover-gray"><img src="/img/keyko.png" id="key" class="keyarea" height="20" width="20" hidden onclick="showkey()"></div>
+        <div class="w3-dropdown-content w3-bar-block w3-card-4 w3-light-gray" style="margin-top: 35px">
           <button id="genkey" class="w3-bar-item w3-button" onclick="genKey()">Generate key</button>
           <button class="w3-bar-item w3-button" onclick="genKeyNode()">Get key from local server</button>
           <button class="w3-bar-item w3-button" onclick="deleteKey()">Delete key</button> 
         </div>
       </div>
+      <button class="w3-bar-item w3-button w3-right w3-ripple w3-hide-small" onclick="clickVolume()"><i id="volume_icon" class="fa fa-volume-off fa-lg" aria-hidden="true"></i></button>
     </div>
     
 	<div id="key_modal" class="w3-modal">
