--- a/view/index.html
+++ b/view/index.html
@@ -40,23 +40,35 @@
       <button class="w3-bar-item w3-button w3-right w3-ripple w3-hide-small" onclick="clickVolume()"><i id="volume_icon" class="fa fa-volume-off fa-lg" aria-hidden="true"></i></button>
     </div>
     
-	<div id="key_modal" class="w3-modal">
+    <div id="key_modal" class="w3-modal">
       <div class="w3-modal-content">
         <div class="w3-container">
           <span onclick="$('#key_modal').hide()" class="w3-button w3-display-topright">&times;</span>
           <p id="wait_please"><i class="fa fa-spinner w3-spin" aria-hidden="true"></i> Request sent; please wait while your key is being generated...</p>
-	      <p id="gen_error" hidden><i class="fa fa-exclamation-circle" aria-hidden="true"></i> An error occurred during key generation!</p>
+          <p id="gen_error" hidden><i class="fa fa-exclamation-circle" aria-hidden="true"></i> An error occurred during key generation!</p>
         </div>
       </div>
     </div>
 	
-	<div id="upload_image_modal" class="w3-modal">
+    <div id="upload_image_modal" class="w3-modal">
       <div class="w3-modal-content">
         <div class="w3-container">
           <span onclick="$('#upload_image_modal').hide();$('#checkbox_img').prop('checked', false)" class="w3-button w3-text-teal w3-display-topright"><i class="fa fa-window-close" aria-hidden="true"></i></span>
           <iframe id="upload_image_modal_iframe" src="">
             <p>Your browser does not support iframes.</p>
           </iframe>
+        </div>
+      </div>
+    </div>
+    
+    <div id="tts_voice_modal" class="w3-modal">
+      <div class="w3-modal-content">
+        <div class="w3-container">
+          <span onclick="$('#tts_voice_modal').hide()" class="w3-button w3-text-teal w3-display-topright"><i class="fa fa-window-close" aria-hidden="true"></i></span>
+          <p>Select a voice:
+          <select id="select_voices">
+          </select>
+          </p>
         </div>
       </div>
     </div>
