--- a/view/index.html
+++ b/view/index.html
@@ -69,6 +69,7 @@
           <select id="select_voices">
           </select>
           </p>
+          <p>Volume: <input id="volume_voice" type="number" min="1" max="10" value="10"></p>
         </div>
       </div>
     </div>
