--- a/view/index.html
+++ b/view/index.html
@@ -89,8 +89,9 @@
       <div class="w3-bar-item w3-right w3-hide-small"><input id="checkbox_img" type="checkbox" onclick="toggleImg()"> img.</div>
       <div class="w3-bar-item w3-right w3-hide-small"><img id="send_secured" class="keyarea" height="20" width="20" hidden src="/img/unsecured.png"></div>
       <div class="w3-bar-item w3-right w3-hide-small w3-hide-medium"><b>[to <span id="dest" onclick="selectConnected('all')">all</span>]</b></div>
-      <button class="w3-bar-item w3-button w3-teal w3-ripple w3-right w3-hide-small" onclick="$('#chat_zone').empty()">Clear messages</button>
+      <button class="w3-bar-item w3-button w3-teal w3-ripple w3-right w3-hide-small" onclick="$('#chat_zone').empty()">Clear</button>
       <button class="w3-bar-item w3-button w3-red w3-ripple w3-right w3-hide-small" onclick="panic()">Panic!!</button>
+      <button id="readAloud_button" class="w3-bar-item w3-button w3-teal w3-ripple w3-right w3-hide-small" onclick="readAloud()">Read</button>
     </footer>
     
     <script src="/script.js"></script>
