--- a/view/index.html
+++ b/view/index.html
@@ -26,7 +26,7 @@
       <div class="w3-bar-item w3-black w3-hide-small"><b>ChatNoir</b></div>
       <div id="help" class="w3-bar-item w3-button w3-teal w3-hide-small" onclick="help()">Need help?</div>
       <button class="w3-bar-item w3-button w3-right w3-teal w3-ripple w3-hide-small" onclick="clickLogin()">Logout</button>
-      <button class="w3-bar-item w3-button w3-right w3-teal w3-ripple w3-hide-medium w3-hide-large" onclick="clickLogin()"><i class="fa fa-sign-out" aria-hidden="true"></i></button>
+      <button class="w3-bar-item w3-button w3-right w3-teal w3-ripple w3-hide-medium w3-hide-large" onclick="clickLogin()"><i class="fa fa-sign-out-alt" aria-hidden="true"></i></button>
       <div class="w3-bar-item w3-right"><span class="w3-hide-small">You are </span><b><span id="nickname">client-x</span></b><span class="w3-hide-small">.</span></div>
       <div id="afk" class="w3-bar-item w3-right" style="color: green" onclick="$('#connected').toggle()"><i class="fa fa-circle" aria-hidden="true"><span class="w3-hide-small"> Connected users</span></i></div>
       <div class="w3-dropdown-hover w3-right keyarea">
