keep sound and tts options on refresh/logout

--- a/view/index.html
+++ b/view/index.html
@@ -70,7 +70,7 @@
           </select>
           </p>
           <p>Volume: <input id="volume_voice" type="number" min="1" max="10" value="10"></p>
-          <p><input id="checkbox_readAloud" type="checkbox"> Read on send</p>
+          <p><input id="checkbox_readAloud" type="checkbox" onclick="rosChange()"> Read on send</p>
         </div>
       </div>
     </div>
