--- a/view/index.html
+++ b/view/index.html
@@ -37,7 +37,7 @@
           <button class="w3-bar-item w3-button" onclick="deleteKey()">Delete key</button> 
         </div>
       </div>
-      <button class="w3-bar-item w3-button w3-right w3-ripple w3-hide-small" onclick="clickVolume()"><i id="volume_icon" class="fa fa-volume-off fa-lg" aria-hidden="true"></i></button>
+      <button id="volume_button" class="w3-bar-item w3-button w3-right w3-ripple w3-hide-small" onclick="clickVolume()"><i id="volume_icon" class="fa fa-volume-off fa-lg" aria-hidden="true"></i></button>
     </div>
     
     <div id="key_modal" class="w3-modal">
