--- a/view/index.html
+++ b/view/index.html
@@ -27,7 +27,7 @@
       <div id="help" class="w3-bar-item w3-button w3-teal w3-hide-small" onclick="help()">Need help?</div>
       <button class="w3-bar-item w3-button w3-right w3-teal w3-ripple w3-hide-small" onclick="clickLogin()">Logout</button>
       <button class="w3-bar-item w3-button w3-right w3-teal w3-ripple w3-hide-medium w3-hide-large" onclick="clickLogin()"><i class="fa fa-sign-out-alt" aria-hidden="true"></i></button>
-      <div class="w3-bar-item w3-right"><span class="w3-hide-small">You are </span><b><span id="nickname">client-x</span></b><span class="w3-hide-small">.</span></div>
+      <div id="nickname_tag" class="w3-bar-item w3-right"><span class="w3-hide-small">You are </span><b><span id="nickname">client-x</span></b><span class="w3-hide-small">.</span></div>
       <div id="afk" class="w3-bar-item w3-right" style="color: green" onclick="$('#connected').toggle()"><i class="fa fa-circle" aria-hidden="true"><span class="w3-hide-small"> Connected users</span></i></div>
       <div class="w3-dropdown-hover w3-right keyarea">
         <div class="w3-bar-item w3-hover-gray"><img src="/img/keyko.png" id="key" class="keyarea" height="20" width="20" hidden onclick="showkey()"></div>
@@ -37,7 +37,7 @@
           <button class="w3-bar-item w3-button" onclick="deleteKey()">Delete key</button> 
         </div>
       </div>
-      <button id="volume_button" class="w3-bar-item w3-button w3-right w3-ripple w3-hide-small" onclick="clickVolume()"><i id="volume_icon" class="fa fa-volume-off fa-lg" aria-hidden="true"></i></button>
+      <button id="volume_button" class="w3-bar-item w3-button w3-right w3-ripple" onclick="clickVolume()"><i id="volume_icon" class="fa fa-volume-off fa-lg" aria-hidden="true"></i></button>
     </div>
     
     <div id="key_modal" class="w3-modal">
